<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/show_fragmnet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View style="@style/line"/>

        <RadioGroup
            android:id="@+id/tab_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layoutHeightSmall"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tab_main_page"
                style="@style/bottom_tab"
                android:text="@string/main_page"/>

            <RadioButton
                android:id="@+id/tab_action"
                style="@style/bottom_tab"
                android:text="@string/action"/>

            <RadioButton
                android:id="@+id/tab_expand"
                style="@style/bottom_tab"
                android:text="@string/expand"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawerlayout_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorMainBackground"
        android:orientation="vertical"
        android:weightSum="10">

        <include layout="@layout/layout_drawerlayout"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
